[package]
name = "iridium"
version = "0.0.17"
authors = ["Fletcher Haynes <fletcher@subnetzero.io>"]
description = "A high level, dynamic language written in Rust."
license = "MIT"
homepage = "https://iridium.rs"
repository = "https://gitlab.com/subnetzero/iridium"

[dependencies]
nom = "^4.0"
clap = { version = "2.32", features = ["yaml"] }
log = "0.4"
env_logger = "0.5.13"
byteorder = "1"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
