[package]
name = "iridium"
version = "0.0.33"
authors = ["Fletcher Haynes <fletcher@subnetzero.io>"]
description = "A resilient VM for the Palladium language"
license = "MIT"
homepage = "https://iridium.rs"
repository = "https://gitlab.com/subnetzero/iridium"

[dependencies]
nom = "^4.0"
clap = { version = "2.32", features = ["yaml"] }
log = "0.4"
env_logger = "0.5.13"
byteorder = "1"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4"
num_cpus = "1.0"
bincode = "1.0.1"
serde = "1.0.80"
serde_derive = "1.0.80"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "iridium"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "iridium"
harness = false
